# tap-jquants

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Pipfile  README.md  meltano.yml  pyproject.toml  sample_config.json  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  ci_workflow.yml  test.yml
tap_jquants/: __init__.py  auth.py  client.py  discover.py  exceptions.py  helpers.py  pagination.py  sync.py  tap.py
tap_jquants/schemas/: announcement.json  breakdown.json  daily_margin_interest.json  daily_quotes.json  dividend.json  fins_announcement.json  fins_dividend.json  fins_statements.json  fs_details.json  index_option.json  indices.json  indices_topix.json  listed_info.json  markets_breakdown.json  prices_am.json  short_selling.json  short_selling_positions.json  statements.json  trades_spec.json  trading_calendar.json  weekly_margin_interest.json
tap_jquants/streams/: __init__.py  abstract.py  announcement.py  breakdown.py  daily_margin_interest.py  daily_quotes.py  dividend.py  fins_announcement.py  fins_dividend.py  fins_statements.py  fs_details.py  index_option.py  indices.py  indices_topix.py  listed_info.py  markets_breakdown.py  prices_am.py  short_selling.py  short_selling_positions.py  statements.py  topix.py  trades_spec.py  trading_calendar.py  weekly_margin_interest.py
tests/: __init__.py  test_core.py  test_helpers.py
